# ferris-chess

./: .gitignore  Cargo.toml  README.md
ferris-chess-board/: Cargo.toml
ferris-chess-board/src/: cache.rs  lib.rs  perft.rs  squares.rs  zobrist.rs
ferris-chess-board/tests/: chess_prog_pos_1.rs  chess_prog_pos_2.rs  chess_prog_pos_3.rs  chess_prog_pos_4.rs  chess_prog_pos_5.rs  chess_prog_pos_6.rs  make_move_tests.rs  move_tests.rs  perft.rs  perft_chess_prog_pos_2.rs  perft_chess_prog_pos_3.rs  perft_chess_prog_pos_4.rs  perft_test_cases.rs  pos_4_divide.rs  unmake_move_tests.rs
ferris-chess-board/tests/common/: mod.rs
ferris-chess-cli/: Cargo.toml
ferris-chess-cli/src/: main.rs  uci.rs
ferris-chess-engine/: Cargo.toml
ferris-chess-engine/src/: lib.rs  transposition_table.rs
ferris-chess-engine/tests/: evaluation.rs  mates.rs  transposition_table.rs
ferris-chess-game/: Cargo.toml
ferris-chess-game/src/: main.rs
