[package]
name = "ferris-chess-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"]}
ferris-chess-board = { path = "../ferris-chess-board" }
rand = "0.8.5"
